[package]
name = "R-DB-Manager"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
argon2 = "0.5.3"
clap = {version = "4.5.59", features = ["derive"]}
colored = "3.1.1"
dotenvy = "0.15.0"
futures = "0.3.32"
serde = "1.0.228"
sqlx = {version = "0.8.6", features = ["mysql", "runtime-tokio", "macros"]}
tokio = {version = "1.49.0", features = ["full"]}
